tests/baselines/reference/chainedAssignmentChecking.errors.txt
chainedAssignmentChecking.ts(21,1): error TS2741: Property 'a' is missing in type 'Z' but required in type 'X'.
chainedAssignmentChecking.ts(21,6): error TS2739: Type 'Z' is missing the following properties from type 'Y': a, b


==== chainedAssignmentChecking.ts (2 errors) ====
    class X {
      constructor(public z) { }
      a: number;
    }
    
    class Y {
      constructor(public z) { }
      a: number;
      b: string;
    }
    
    class Z {
      z: any;
      c: string;
    }
    
    var c1 = new X(3);
    var c2 = new Y(5);
    var c3 = new Z();
    
    c1 = c2 = c3; // Should be error
    ~~
!!! error TS2741: Property 'a' is missing in type 'Z' but required in type 'X'.
!!! related TS2728 chainedAssignmentChecking.ts:3:3: 'a' is declared here.
         ~~
!!! error TS2739: Type 'Z' is missing the following properties from type 'Y': a, b
    